<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EnsembleCare</string>
    <string name="txt_hint_search">Enter text to search</string>
    <string name="txt_lbl_get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="txt_lbl_forgot_password"><u>Forgot Password</u></string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login">LOGIN</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shd_wishes_txt">"Your target for today is positive mindset and smile to everyone"</string>
    <string name="shd_no_appoint_txt">No Appointment For Today</string>
    <string name="shd_chat_msg_txt">Chat with the Therpist/Physician</string>
    <string name="shd_mail_msg_txt">Email with the Therpist/Physician</string>
    <string name="shd_start_consult_btn_txt">Start</string>
    <string name="shd_cancel_consult_btn_txt">Cancel</string>
    <string name="shd_previous_consulation_txt">Previous Consultation</string>
    <string name="shd_view_all_btn_txt">View All</string>
    <string name="settings">Settings</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="audio_device">Audio Device</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="resend"><u>Resend</u></string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>
    <string name="parental_consent">Parental Consent Form</string>
    <string name="parent_name">Parent Name</string>
    <string-array name="relationship">
        <item>Relation</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Sister-in-Law</item>
        <item>Stepfather</item>
        <item>Stepmother</item>
        <item>Stepdaughter</item>
        <item>Stepson</item>
        <item>Stepbrother</item>
        <item>Stepsister</item>
        <item>Partner</item>
        <item>Legal Guardian</item>
        <item>Aunt</item>
        <item>Brother</item>
        <item>Cousin</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Grandfather</item>
        <item>Grandmother</item>
        <item>Spouse</item>
        <item>Niece</item>
        <item>Nephew</item>
        <item>Mother-in-Law</item>
        <item>Father-in-Law</item>
        <item>Brother-in-Law</item>
    </string-array>
    <string name="contact_number">Contact Number</string>
    <string name="thank_you_for_filling_the_assessment">Thank you for\ncompleting the survey</string>
    <string name="appreciate_text_after_assessment">I really appreciate your effort and the time you devoted to filling the assessment. Your answers will help us improve our services for you.</string>
    <string name="thank_you">Thank you.</string>
    <string name="let_us_know_about_you">Tell us about you</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="ssn">SSN</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Prefer not to say</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="dob">DOB</string>
    <string name="you_are_done">You are done!</string>
    <string name="resend_the_code"><u>Resend the code</u></string>
    <string name="register_part_2">I hereby acknowledge and agree to abide by the <font color='#5C2E7E'><u>terms and conditions</u></font> set forth by EnsembleCare.</string>
    <string name="covered_self_pay">I hereby acknowledge and agree to abide by the <font color='#5C2E7E'><u>terms and conditions</u></font> set forth by EnsembleCare.</string>
    <string name="covered_eap">I hereby acknowledge and agree to abide by the <font color='#5C2E7E'><u>terms and conditions</u></font> set forth by EnsembleCare.</string>
    <string name="covered_insurance">I hereby acknowledge and agree to abide by the <font color='#5C2E7E'><u>terms and conditions</u></font> set forth by EnsembleCare.</string>
    <string name="consent_imp">Why is consent important? Read about it <font color='#5C2E7E'><u>here</u></font></string>
    <string name="billed_monthly_terms_apply">Billed Monthly. <font color='#830CDB'><u>Terms apply</u></font></string>
    <string name="billed_quarterly_terms_apply">Billed Quarterly. <font color='#830CDB'><u>Terms apply</u></font></string>
    <string name="billed_annually_terms_apply">Billed Annually. <font color='#830CDB'><u>Terms apply</u></font></string>
    <string name="plan_by_subscribing">By subscribing, you agree to <font color='#830CDB'><u>our terms</u></font>.</string>
    <string name="vob_verified"><font color='#5C2E7E'><b>Congratulations!</b></font> You have been subscribed to <b>Plus</b> plan</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="call_911"><a href="911">911</a></string>
    <string name="crisis_lifeline"><a href="https://988lifeline.org/">988 Suicide &amp; Crisis Lifeline</a> (formerly known as the National Suicide Prevention Lifeline): <a href="988">988</a> or English or Spanish, or <a href="https://988lifeline.org/chat/">Lifeline Chat</a>. TTY users can use their preferred relay service or dial <a href="711">711</a> then <a href="988">988</a>.</string>
    <string name="crisis_text_line">Crisis Text Line: Text <a href="sms:741741?body=SIGNS">SIGNS</a> to <a href="sms:741741?body=SIGNS">741741</a> for 24/7, anonymous, free crisis counseling</string>
    <string name="disaster_distress_helpline"><a href="https://www.samhsa.gov/disaster-preparedness">Disaster Distress Helpline</a>: CALL or TEXT <a href="1-800-985-5990">1-800-985-5990</a> (press 2 for Spanish)</string>
    <string name="trans_lifeline"><a href="https://translifeline.org/">Trans Lifeline</a>: <a href="1-877-565-8860">1-877-565-8860</a> (para español presiona el 2)</string>
    <string name="the_trevor_project">The Trevor Project’s <a href="https://www.thetrevorproject.org/get-help/">TrevorLifeline</a>: <a href="1-866-488-7386">1-866-488-7386</a></string>
    <string name="crisis_screen_lifeline"><a href="https://988lifeline.org/">988 Suicide &amp; Crisis Lifeline</a> (formerly known as the National Suicide Prevention Lifeline): <a href="988">988</a> or English or Spanish, or <a href="https://988lifeline.org/chat/">Lifeline Chat</a>. TTY users can use their preferred relay service or dial <a href="711">711</a> then <a href="988">988</a>.</string>
    <string name="crisis_screen_text_line"><b>Crisis Text Line:</b> Text <a href="sms:741741?body=SIGNS">SIGNS</a> to <a href="sms:741741?body=SIGNS">741741</a> for 24/7, anonymous, free crisis counseling</string>
    <string name="crisis_screen_disaster_distress_helpline"><a href="https://www.samhsa.gov/disaster-preparedness">Disaster Distress Helpline</a>: CALL or TEXT <a href="1-800-985-5990">1-800-985-5990</a> (press 2 for Spanish)</string>
    <string name="crisis_screen_national_domestic"><a href="https://www.thehotline.org/">National Domestic Violence Hotline</a>: <a href="1-800-799-7233">1-800-799-7233</a> or text <a href="sms:22522?body=LOVEIS">LOVEIS</a> to <a href="sms:22522?body=LOVEIS">22522</a></string>
    <string name="crisis_screen_national_child"><a href="https://childhelphotline.org/">National Child Abuse Hotline</a>: 1-800-4AChild (<a href="1-800-422-4453">1-800-422-4453</a>) or text <a href="sms:1-800-422-4453">1-800-422-4453</a></string>
    <string name="crisis_screen_national_sexual"><a href="https://rainn.org/">National Sexual Assault Hotline</a>: <a href="1-800-656-HOPE">1-800-656-HOPE</a>(4673) or <a href="https://hotline.rainn.org/online">Online Chat</a></string>
    <string name="elders">To report abuse of a person with a disability under the age of 60:\nDisabled Persons Protection Commission : <a href="(800) 426-9009">(800) 426-9009</a></string>
    <string name="veterans"><a href="https://www.veteranscrisisline.net/">Veteran’s Crisis Line</a>: <a href="988">988</a> , then select 1, or <a href="https://www.veteranscrisisline.net/get-help-now/chat/">Crisis Chat</a> or text: <a href="sms:838255">838255</a></string>
    <string name="national_suicide"><a href="https://988lifeline.org/">National Suicide Prevention Lifeline</a></string>
    <string name="disaster_distress"><a href="https://www.samhsa.gov/disaster-preparedness">Disaster Distress Helpline</a></string>
    <string name="national_domestic"><a href="https://www.thehotline.org/">National Domestic Violence Hotline</a></string>
    <string name="national_child"><a href="https://childhelphotline.org/">National Child Abuse Hotline</a></string>
    <string name="national_sexual"><a href="https://rainn.org/">National Sexual Assault Hotline</a></string>
    <string name="crisis_veterans"><a href="https://www.veteranscrisisline.net/">Veteran’s Crisis Line</a></string>
    <string name="crisis_trans_lifeline"><a href="https://translifeline.org/">Trans Lifeline</a></string>
    <string name="crisis_the_trevor_project"><a href="https://www.thetrevorproject.org/get-help/">The Trevor Project</a></string>
    <string-array name="status">
        <item>Military Status</item>
        <item>Active Duty</item>
        <item>Veteran</item>
        <item>None</item>
    </string-array>
</resources>